Some Formatting dons

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   color: white;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 code {
   font-family: "Poppins", source-code-pro, Menlo, Monaco, Consolas,
     "Courier New", monospace;
